--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "tslint-microsoft-contrib": "5.2.1",
         "tslint": "5.11.0",
         "@types/react": "^16.7.7",
-        "@types/react-dom": "^16.0.11"
+        "@types/react-dom": "^16.0.11",
+        "fabric": "^2.6.6"
     },
     "dependencies": {
         "react": "^16.6.3",
