--- a/package.json
+++ b/package.json
@@ -11,24 +11,26 @@
         "deploy": "gh-pages -d dist"
     },
     "devDependencies": {
-        "eventemitter3": "3.1.0",
-        "gh-pages": "^2.0.1",
-        "express": "^4.16.4",
-        "autoprefixer": "9.3.1",
-        "awesome-typescript-loader": "^5.2.1",
-        "html-webpack-plugin": "^3.2.0",
-        "source-map-loader": "^0.2.4",
-        "webpack": "^4.26.1",
-        "webpack-cli": "^3.1.2",
-        "webpack-dev-server": "3.1.10",
-        "semantic-ui-css": "2.4.1",
-        "typescript": "^3.1.6",
-        "ts-loader": "^5.3.1",
-        "tslint-microsoft-contrib": "5.2.1",
-        "tslint": "5.11.0",
         "@types/react": "^16.7.7",
         "@types/react-dom": "^16.0.11",
-        "fabric": "^2.6.6"
+        "autoprefixer": "9.3.1",
+        "awesome-typescript-loader": "^5.2.1",
+        "css-loader": "^2.1.1",
+        "eventemitter3": "3.1.0",
+        "express": "^4.16.4",
+        "fabric": "^2.6.6",
+        "gh-pages": "^2.0.1",
+        "html-webpack-plugin": "^3.2.0",
+        "semantic-ui-css": "2.4.1",
+        "source-map-loader": "^0.2.4",
+        "style-loader": "^0.23.1",
+        "ts-loader": "^5.3.1",
+        "tslint": "5.11.0",
+        "tslint-microsoft-contrib": "5.2.1",
+        "typescript": "^3.1.6",
+        "webpack": "^4.26.1",
+        "webpack-cli": "^3.1.2",
+        "webpack-dev-server": "3.1.10"
     },
     "dependencies": {
         "react": "^16.6.3",
