--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     },
     "dependencies": {
         "react": "^16.6.3",
+        "react-color": "^2.17.0",
         "react-dom": "^16.6.3",
         "semantic-ui-react": "0.83.0"
     }
