--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "deploy": "gh-pages -d dist"
     },
     "devDependencies": {
+        "@fortawesome/fontawesome-pro": "^5.8.1",
         "@types/react": "^16.7.7",
         "@types/react-dom": "^16.0.11",
         "autoprefixer": "9.3.1",
@@ -33,6 +34,13 @@
         "webpack-dev-server": "3.1.10"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.17",
+        "@fortawesome/free-solid-svg-icons": "^5.8.1",
+        "@fortawesome/pro-light-svg-icons": "^5.8.1",
+        "@fortawesome/pro-solid-svg-icons": "^5.8.1",
+        "@fortawesome/react-fontawesome": "^0.1.4",
+        "i": "^0.3.6",
+        "npm": "^6.9.0",
         "react": "^16.6.3",
         "react-color": "^2.17.0",
         "react-dom": "^16.6.3",
